[tool.poetry]
name = "oddsprout"
version = "0.1.0"
description = "Generate random JSON with no schemas involved"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ixia = "^1.3.1"
tomli = { version = "^2.0.1", python = "<3.11" }
dahlia = "^2.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^8.0.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.12"
interrogate = "^1.7.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
oddsprout = "oddsprout.__main__:main"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys.version_info.*:", "if __name__ == \"__main__\":"]

[tool.interrogate]
exclude = ["tests", "oddsprout/__main__.py"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
verbose = 1

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN1", "ANN401", "ISC001", "T201", "TD003", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
