[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oddsprout"
version = "0.1.1"
description = "Generate random JSON with no schemas involved"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "trag1c", email = "trag1cdev@yahoo.com" }
]
requires-python = ">=3.9"
dependencies = [
    "dahlia~=3.0",
    "ixia>=1.3.2,<2",
    "tomli>=2.0.1,<3 ; python_full_version < '3.11'",
]

[project.urls]
documentation = "https://trag1c.github.io/oddsprout/"
repository = "https://github.com/trag1c/oddsprout"

[project.scripts]
oddsprout = "oddsprout.__main__:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.12,<10",
    "mkdocs>=1.5.3,<2",
    "mypy~=1.8",
    "pytest>=8.0.2,<9",
    "ruff~=0.8.0",
    "interrogate~=1.7",
    "pytest-cov~=5.0",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys.version_info.*:", "if __name__ == \"__main__\":"]

[tool.interrogate]
exclude = ["tests", "src/oddsprout/__main__.py"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
verbose = 1

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN401", "ISC001", "T201", "TD003", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]
